http://li3.me/docs/specs/accepted/LSR-0-coding.md

New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.


2017-11-01 niel
	Fix: Quick fix for bad status being returned for when Request limit is exceeded.
2017-10-30 DariusIII
	Fix: Update categorization to properly categorize sports related releases (fixes issue #2527)
2017-10-22 niel
	Chg: Defaults in settings.example.php for logging, are now enabled.
	Chg: Composer post install script now copies settings.example.php to settings.php automatically.
2017-10-11 niel
	Fix: Force case insensitive check for 'SQL_CALC_FOUND_ROWS' in DB::queryCalc() to avoid potential
		problems.
2017-10-10 DariusIII
	Fix: Tmdb error on ajax_mymovies.php (Fixes issue #2526)
2017-10-09 niel
	Fix: Add missing use statement to fix TMDb not found error. Closes issue 2526.
2017-10-02 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.0.0


2017-09-28 niel
	Mrg: PR 2520, from Wally73 - Changes the default sort order for Predb model.
2017-09-27 DariusIII
	Chg: Move isMusic check in determineCategory function to the end
2017-09-19 DariusIII
	Chg: Remove nZEDbPre2 channel from ircscraper_settings_example.php
2017-08-12 niel
	Fix: Error matching timestamp in predb_import_daily_batch.php caused by using wrong regex
		match index. Switched to using named regex matches instead.
2017-09-02 niel
	Mrg: dev-lithium-logger branch. Add basic logger which can be expanded later.
2017-08-30 DariusIII
	Chg: Disable caching in php-tmdb library
2017-08-29 niel
	Fix: Change check for gitHooks link, to only test for its existence, not if it is executable.
2017-08-29 DariusIII
	Fix: Set pagertotalitems to 0 if there is no totalcount returned from release queries
2017-08-18 niel